[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/Collision/Hitbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/ProjectileBase.gd" type="Script" id=2]

[node name="ProjectileBase" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Duration" type="Timer" parent="." index="1"]
one_shot = true
autostart = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="." index="2"]

[connection signal="area_entered" from="." to="." method="_on_ProjectileBase_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_ProjectileBase_body_entered"]
[connection signal="timeout" from="Duration" to="." method="_on_Duration_timeout"]
